--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build-static": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
-    "build-static": "next build && next export"
+    "next-lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "format:check": "prettier --check \"./**/*.{js,jsx,ts,tsx}\" --config ./.prettierrc",
+    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" --config ./.prettierrc"
   },
   "dependencies": {
     "axios": "^0.25.0",
@@ -30,15 +36,21 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@types/react-datepicker": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.4.6",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-testing-library": "^5.0.4",
     "husky": "^7.0.4",
+    "jest": "^27.4.7",
     "lint-staged": "^12.3.2",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
